--- a/.devcontainer/recipevault/docker-compose.app.yml
+++ b/.devcontainer/recipevault/docker-compose.app.yml
@@ -5,23 +5,22 @@ services:
   api:
     image: recipevault-api
     build:
-      context: .
-      dockerfile: recipevault.API/Dockerfile
+      context: ../..
+      dockerfile: ./recipevault.API/Dockerfile
       target: build
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:5000;http://+:5001
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=cert
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+      - ASPNETCORE_URLS=https://+:5000;http://+
       - ConnectionStrings__DefaultConnection=Host=postgres;Database=postgres;Username=postgres;Password=postgres
+      # - ASPNETCORE_Kestrel__Certificates__Default__Password=cert
+      # - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
     volumes:
-      - ~/.aspnet/https:/https:ro
-      - ${APPDATA}/microsoft/UserSecrets/:/root/.microsoft/usersecrets:ro
-      - ./recipevault.API/:/app
+      # - /https/aspnetapp.pfx:/https/aspnetapp.pfx:ro
+      - ./recipevault.API:/app
     ports:
       - 5000:5000
-      - 5001:5001
-    entrypoint: ['dotnet', 'watch', 'run', '--no-launch-profile']
+      - 5001:80
+    command: sh -c "dotnet dev-certs https -ep /https/aspnetcert.pfx -p cert && dotnet watch run --no-launch-profile || tail -f /dev/null"
     depends_on:
       - postgres
 
