--- a/recipevault.API/appsettings.json
+++ b/recipevault.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Port:${PORT}Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}"
+  }
 }
