--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -13,7 +13,7 @@ services:
       - ASPNETCORE_URLS=https://+:5000;http://+:5001
       - ASPNETCORE_Kestrel__Certificates__Default__Password=cert
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-      - ConnectionStrings__DefaultConnection=Host=postgres;Database=postgres;Username=postgres;Password=postgres
+      # - ConnectionStrings__DefaultConnection=Host=postgres;Database=postgres;Username=postgres;Password=postgres
     volumes:
       - ~/.aspnet/https:/https:ro
       - ${APPDATA}/microsoft/UserSecrets/:/root/.microsoft/usersecrets:ro
@@ -38,11 +38,13 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_DB: postgres
+      POSTGRES_DB: recipevault
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
       - database:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
 volumes:
   database:
