--- a/recipevault.API/appsettings.json
+++ b/recipevault.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Port:${PORT}Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=recipevault;Username=postgres;Password=postgres;Timeout=15;CommandTimeout=15; Pooling=true;MinPoolSize=1;MaxPoolSize=20;ConnectionIdleLifetime=300;ConnectionPruningInterval=10; Trust Server Certificate=true"
   }
 }
