refactor: improve Docker setup and data models
Enhance Docker configs with health checks and env vars.
Update data models with timestamps and fix relationships.
Add database migration on startup and health check endpoint.

--- a/recipevault.API/Dockerfile
+++ b/recipevault.API/Dockerfile
@@ -15,7 +15,8 @@ RUN dotnet restore "recipevault.API/recipevault.API.csproj"
 COPY . .
 WORKDIR "/src/recipevault.API"
 # Add dotnet tools to the path
-ENV PATH="$PATH:/root/.dotnet/tools"
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="${PATH}:/root/.dotnet/tools"
 RUN dotnet build "recipevault.API.csproj" -c $configuration -o /app/build
 
 
