--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,4 +4,4 @@ repos:
     hooks:
       - id: conventional-pre-commit
         stages: [commit-msg]
-        args: [feat, fix, ci, chore, test, build, docs, revert, style] # optional: list of Conventional Commits types to allow e.g. [feat, fix, ci, chore, test]
+        args: [feat, fix, ci, chore, test, build, docs, revert, style, refactor] # optional: list of Conventional Commits types to allow e.g. [feat, fix, ci, chore, test]
