refactor: move migrations to a service in docker-compose
- Added `migrations` service to `docker-compose.yaml` and `docker-compose.dev.yaml` to handle database migrations.
- Removed inline database migration code from `Program.cs` to streamline the application startup process.
- Ensured `api` and `db` services have `restart: unless-stopped` policy for better reliability.

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -48,6 +48,20 @@ services:
       retries: 3
       start_period: 30s
 
+  migrations:
+    build:
+      context: .
+      dockerfile: recipevault.API/Dockerfile
+      target: build
+    command: ['dotnet', 'ef', 'database', 'update']
+    restart: no
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=postgres;Database=${DB_NAME:-recipevault};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres};Timeout=15;CommandTimeout=15; Pooling=true;MinPoolSize=1;MaxPoolSize=20;ConnectionIdleLifetime=300;ConnectionPruningInterval=10; Trust Server Certificate=true
+    depends_on:
+      postgres:
+        condition: service_healthy
+
   postgres:
     image: postgres:latest
     environment:
